--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-		"format": "prettier --write ."
+    "format": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@types/d3": "^7.4.0",
     "@types/styled-components": "^5.1.25",
-    "@types/three": "^0.141.0"
+    "@types/three": "^0.141.0",
+    "prettier": "^2.7.1"
   }
 }
