--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14.x"
+      - run: npm install
       - run: npm run format
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
